refactor: Update project name and add Lottie animation dependency
Renames the project from "InstaConnect NG - Business Directory" to "Vendors Hub - Business Directory" across configuration files and UI elements.
Adds `@lottiefiles/react-lottie-player` as a dependency to enable Lottie animations within the application.
Updates type definitions in `types.ts` to include a `products` field in the `Business` interface, intended for vendor product listings.
Refactors the `Layout.tsx` component to dynamically render navigation links based on `headerConfig`, improving flexibility.
Removes unused date utility functions from `constants.ts`.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>InstaConnect NG - Business Directory</title>
+    <title>Vendors Hub - Business Directory</title>
     <meta name="description" content="Find the best businesses in your area" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -96,7 +96,8 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
     "recharts": "https://esm.sh/recharts@2.12.7?external=react,react-dom",
     "chart.js": "https://esm.sh/chart.js@4.4.1/auto",
-    "react-chartjs-2": "https://esm.sh/react-chartjs-2@5.2.0?external=react,react-dom,chart.js"
+    "react-chartjs-2": "https://esm.sh/react-chartjs-2@5.2.0?external=react,react-dom,chart.js",
+    "@lottiefiles/react-lottie-player": "https://esm.sh/@lottiefiles/react-lottie-player@3.5.4?external=react,react-dom"
   }
 }
 </script>
